[package]
name = "embedded_sandbox"
version = "0.1.0"
edition = "2024"

[dependencies]
stm32f4xx-hal = { version = "0.22.1", features = ["stm32f446"] }
panic-halt = "1.0.0"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
defmt = "1.0.1"
defmt-rtt = "1.0.0"

[build]
target = "thumbv7em-none-eabihf"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"